re-org folders, included html best practice for access.

--- a/IvanOnTech-Moralis/index.HTML
+++ b/IvanOnTech-Moralis/index.HTML
@@ -11,5 +11,16 @@
     <p> Blue crackers.</p>
     <p>Test Test</p>
     <p>red crackers.</p>
+
+
+    <script>
+
+       var string0 = "hello ", string1 = "hi ", string2 = "whatsup ";
+       var num0 = 0, num1 = 1, num2 = 2;
+
+       document.write(string0 + num0 + string1 + num1 , string2 , num2 , "<br>");
+       document.write(string0 , num0 + string1 , num1 , string2 , num2);
+
+    </script>
 </body>
 </html>
